# VulkanTemplate

./: .gitignore  CMakeLists.txt  README.md
include/: application.hpp  vk_manager.hpp  vulkan_application.hpp  window.hpp
include/platform/windows/: window_windows.hpp
shader/: shader.slang
src/: CMakeLists.txt  application.cpp  main.cpp  vk_manager.cpp  vulkan_application.cpp  window.cpp
src/platform/windows/: CMakeLists.txt  window_windows.cpp
